--- a/views/users/product-detail.ejs
+++ b/views/users/product-detail.ejs
@@ -1388,7 +1388,7 @@
 						title: "Success",
 						text: response.data.message
 					}).then(() => {
-						window.location.href = `http://localhost:8000/productDetails?productId=${productId}`;
+						window.location.href = `/productDetails?productId=${productId}`;
 					})
 				} else {
 					await Swal.fire({
@@ -1414,7 +1414,7 @@
 							title:'success',
 							text:response.data.message
 						}).then(()=>{
-							window.location.href= `http://localhost:8000/productDetails?productId=${productId}`;
+							window.location.href= `/productDetails?productId=${productId}`;
 						})
 					}else{
 						await Swal.fire({
@@ -1422,7 +1422,7 @@
 							title:'error',
 							text:response.data.message
 						})
-						window.location.href=`http://localhost:8000/productDetails?productId=${productId}`;
+						window.location.href=`/productDetails?productId=${productId}`;
 					}
 
 				} catch (error) {
