--- a/views/users/product-detail.ejs
+++ b/views/users/product-detail.ejs
@@ -1396,7 +1396,7 @@
 						title: "Error",
 						text: response.data.message
 					})
-					window.location.href = `http://localhost:8000/productDetails?productId=${productId}`;
+					window.location.href = `/productDetails?productId=${productId}`;
 				}
 			} catch (error) {
 				console.error("Error occurred:", error);
